--- a/src/pages/Event.css
+++ b/src/pages/Event.css
@@ -1,36 +1,49 @@
-.eventbox{
-    position: relative;
-    
-    overflow-y: scroll;
-    overflow-x: hidden;
-    margin-left: 100px;
-    max-width: 800px;
-    max-height: 400px;
+.eventbox {
+  position: relative;
 
-    scroll-behavior: smooth;
-    border-radius: 10px;
-    background: linear-gradient(0deg, #FD6E7B, #FEAE88);
-    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.5);
-    top:100px;  
-    
+  overflow-y: scroll;
+  overflow-x: hidden;
+  margin-left: 100px;
+  max-width: 800px;
+  max-height: 500px;
+
+  scroll-behavior: smooth;
+  position: relative;
+  z-index: 1;
+  /* From https://css.glass */
+  background: rgba(255, 255, 255, 0.81);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  border: 1px solid rgba(255, 255, 255, 0.31);
+  top: 100px;
+  background: rgba(255, 255, 255, 0.15);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4.5px);
+  -webkit-backdrop-filter: blur(4.5px);
+  border-radius: 10px;
 }
 
-.eventbox::-webkit-scrollbar{
-    display: none;
-  }
+.eventbox::-webkit-scrollbar {
+  display: none;
+}
 
 .section {
-    height: 20px;
+  height: 20px;
 }
 
 .container {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 .eventdis {
-    font-size: large;
-    color: #718096;
+  font-size: large;
+  color: #718096;
 }
 .title {
-    font-size: 3rem;
+  font-size: 3rem;
+}
+.eventboxmain {
+  padding: 50px;
 }
