--- a/src/pages/Event.css
+++ b/src/pages/Event.css
@@ -11,14 +11,15 @@
   position: relative;
   z-index: 1;
   /* From https://css.glass */
-  background: rgba(255, 255, 255, 0.81);
+  
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(6px);
+  background: linear-gradient(0deg, #FD6E7B, #FEAE88);
   -webkit-backdrop-filter: blur(6px);
   border: 1px solid rgba(255, 255, 255, 0.31);
   top: 100px;
-  background: rgba(255, 255, 255, 0.15);
+  
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(4.5px);
   -webkit-backdrop-filter: blur(4.5px);
