--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,9 @@ body {
   padding: 1rem;
   
 }
-
+.btn-info {
+  margin-left: 45%;
+}
 .gutters-sm {
   margin-right: -8px;
   margin-left: -8px;
@@ -56,7 +58,23 @@ body {
   padding-right: 8px;
   padding-left: 8px;
 }
+.card-avatar{
+  
+  top: 100px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  background: linear-gradient(145deg, #e6e6e6, #ffffff);
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 0 solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+  border-radius: 50px;
 
+  box-shadow: 28px 28px 56px #d9d9d9, -28px -28px 56px #ffffff;
+}
 .mb-3,
 .my-3 {
   margin-bottom: 1rem !important;
