--- a/src/pages/Event.css
+++ b/src/pages/Event.css
@@ -6,22 +6,21 @@
   margin-left: 100px;
   max-width: 800px;
   max-height: 500px;
-
   scroll-behavior: smooth;
   position: relative;
-  z-index: 1;
+  z-index: 4;
   /* From https://css.glass */
 
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(6px);
-  background: linear-gradient(0deg, #fd6e7b, #feae88);
-  -webkit-backdrop-filter: blur(6px);
   border: 1px solid rgba(255, 255, 255, 0.31);
   top: 100px;
 
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(4.5px);
+  -webkit-backdrop-filter: blur(4.5px);
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.15);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(2.5px);
   -webkit-backdrop-filter: blur(4.5px);
   border-radius: 10px;
 }
@@ -45,4 +44,57 @@
 }
 .title {
   font-size: 3rem;
+}
+.eventimqb {
+  position: absolute;
+}
+.e1 {
+  position: fixed;
+  height: 800px;
+  width: 700px;
+  z-index: 3;
+  right: -100px;
+  animation: mymove 5s infinite;
+}
+.e2 {
+  position: fixed;
+  height: 700px;
+  width: 600px;
+  z-index: 2;
+  left: 0;
+}
+@keyframes mymove {
+  0% {
+    rotate: -10deg;
+  }
+  25% {
+    rotate: -5deg;
+  }
+  50% {
+    rotate: 0deg;
+  }
+  75% {
+    rotate: -5deg;
+  }
+  100% {
+    rotate: -10deg;
+  }
+}
+.eventcontainer {
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  width: 100vw;
+  height: 100%;
+  background-color: hsla(218, 0%, 100%, 1);
+  background-image: radial-gradient(
+      at 25% 40%,
+      hsla(221, 33%, 57%, 1) 0px,
+      transparent 50%
+    ),
+    radial-gradient(at 99% 97%, hsla(342, 0%, 100%, 1) 0px, transparent 50%);
+}
+.eventdis {
+  position: relative;
+  z-index: 4;
 }
